# interview-analysis

./: .env.template  .gitignore  README.md  interviews.yaml  pyproject.toml  update_local_bin.sh
example/: .~lock.results.ods#  Expected Result.md  interviews.yaml  results.ods
example/transcripts/: Lecturer A.odt  Lecturer B.txt  Lecturer C.md  Lecturer D.txt  R2-DESC.txt
interview_analysis/: __init__.py  ai_llm.py  app.py  cli_io.py  codebook.py  config.py  hash_utils.py  smoke.py  yaml_io.py
interview_analysis/actions/: __init__.py  analyze.py  base.py  clean.py  segment.py  template.py  write_output.py
interview_analysis/transcripts/: __init__.py  base.py  odt_parser.py  registry.py  statement_blocks.py  text_parser.py
